[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimem"
version = "1.0.0"
description = "OmniMem — 五层混合记忆系统：感知→工作→结构化→深层→内化，含治理引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OmniMem Contributors"},
]
keywords = [
    "memory-system",
    "ai-agent",
    "rag",
    "vector-database",
    "knowledge-graph",
    "chromadb",
    "memory-provider",
    "consolidation",
    "forgetting-curve",
    "privacy-protection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "chromadb>=0.4.0,<0.7.0",
    "rank-bm25>=0.2.0,<0.3.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=42.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
lora = [
    "peft>=0.8.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
all = [
    "omnimem[crypto,embeddings,lora,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/omnimem"
Documentation = "https://github.com/yourusername/omnimem#readme"
Repository = "https://github.com/yourusername/omnimem.git"
Issues = "https://github.com/yourusername/omnimem/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnimem*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.coverage.run]
source = ["omnimem"]
omit = [
    "tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
