[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimem"
version = "1.0.0"
description = "OmniMem — 五层混合记忆系统：感知→工作→结构化→深层→内化，含治理引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OmniMem Contributors"},
]
keywords = [
    "memory-system",
    "ai-agent",
    "rag",
    "vector-database",
    "knowledge-graph",
    "chromadb",
    "memory-provider",
    "consolidation",
    "forgetting-curve",
    "privacy-protection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "chromadb>=0.4.0,<0.7.0",
    "rank-bm25>=0.2.0,<0.3.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
omnimem-mcp = "omnimem.mcp_server:main"
omnimem-api = "omnimem.rest_api:run_api"

[project.optional-dependencies]
crypto = [
    "cryptography>=42.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
lora = [
    "peft>=0.8.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
langchain = [
    "langchain>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
all = [
    "omnimem[crypto,embeddings,lora,mcp,langchain,dev]",
]

[project.urls]
Homepage = "https://github.com/weksbwrx62862/omnimem"
Documentation = "https://github.com/weksbwrx62862/omnimem#readme"
Repository = "https://github.com/weksbwrx62862/omnimem.git"
Issues = "https://github.com/weksbwrx62862/omnimem/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnimem*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM102",  # nested if statements (often less readable when combined)
    "SIM105",  # contextlib.suppress (try/except/pass is often clearer)
    "SIM108",  # ternary operator (if/else is often more readable)
    "SIM110",  # any() instead of for loop (sometimes less readable)
    "SIM103",  # return condition directly (sometimes less readable)
    "ARG002",  # unused method arguments (common in APIs/hooks)
    "B007",    # unused loop control variable (common in dict iteration)
    "B905",    # zip without strict (Python 3.9 compat, strict added in 3.10)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
allow_untyped_calls = false
allow_untyped_defs = false
allow_incomplete_defs = false
warn_no_return = true

[tool.coverage.run]
source = ["omnimem"]
omit = [
    "tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
